examples/invalid/rt_forbidden_composite_types.sarif
struct Message {
  text: Text,
}

enum OptionText {
  none,
  some(Text),
}

fn main(message: Message) -> OptionText {
  OptionText.none
}
